k8s/ingress/argocd/base/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: ssok-group
    alb.ingress.kubernetes.io/subnets: subnet-0477299d6297b7a52,subnet-05bce5c34c2186ef4
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:635091448057:certificate/eae8096f-587b-4bd8-9427-48735783d857
    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  rules:
    - host: argocd.ssok.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
